--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,10 @@
 <html>
   <head>
     <title>My app</title>
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <app-main></app-main>
